--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -3,7 +3,36 @@
     background-color: #535bf2;
     display: flex;
     flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    padding: 20px;
+    z-index: 100;
+}
+
+.logo {
+    left: 10px;
+    text-align: center;
+    float: left;
+}
+
+.links {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 75px;
+}
+
+.link {
+    padding: 10px;
+    color: white;
+    transition: .2s;
+}
+
+.link:hover {
+    color: #9f9ff9;
+}
+
+.logo > h2 {
+    color: white;
 }
