--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,22 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1, h2, p {
+  margin: 0;
+  padding: 0;
 }
 
 a {
