--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -7,23 +8,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.container {
-  width: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 h1, h2, p {
   margin: 0;
   padding: 0;
 }
 
+.text {
+  font-size: 20px;
+  color: white;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #2F4F8EFF;
   text-decoration: inherit;
 }
 a:hover {
