--- a/client/src/components/left-panel/left-panel.css
+++ b/client/src/components/left-panel/left-panel.css
@@ -35,9 +35,12 @@
     border-radius: 8px;
     background-color: white;
     width: 180px;
-
-
     transition: .2s linear;
+}
+
+.link.active, .button.active {
+    color: white;
+    background-color: #1c0a5c;
 }
 
 .link:hover {
