--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,14 @@ h1, h2, p {
   padding: 0;
 }
 
+.right-panel {
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .text {
   font-size: 20px;
   color: white;
