--- a/client/src/view/user/main/main.css
+++ b/client/src/view/user/main/main.css
@@ -7,3 +7,9 @@
     align-items: center;
     gap: 10px;
 }
+
+.main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
