--- a/client/src/components/left-panel/left-panel.css
+++ b/client/src/components/left-panel/left-panel.css
@@ -9,11 +9,11 @@
     border-radius: 10px;
 }
 
-.ticket-wrapper {
+.link-wrapper {
     width: 100%;
 }
 
-.ticket-wrapper > h2 {
+.link-wrapper > h2 {
     color: #2F4F8EFF;
     font-weight: 700;
     font-size: 30px;
