--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,7 @@
 h1, h2, p {
   margin: 0;
   padding: 0;
+  text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.07);
 }
 
 .right-panel {
@@ -19,6 +20,7 @@ h1, h2, p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .text {
@@ -46,23 +48,51 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.button {
+  margin-left: 70px;
+  width: 180px;
+  text-align: center;
+  padding: 15px 20px;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  color: white;
+  background-color: #2F4F8EFF;
+  margin-top: 50px;
+
+  transition: .2s linear;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
-button:hover {
-  border-color: #646cff;
+
+.button:hover {
+  background-color: #1c0a5c;
+  color: #ffffff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.link {
+  padding: 15px 20px;
+  margin-left: 70px;
+  border-radius: 8px;
+  background-color: white;
+  width: 180px;
+  transition: .1s linear;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.link:active, .button:active {
+  transform: scale(0.92);
+}
+
+.link:hover {
+  background-color: #1c0a5c;
+  color: white;
+}
+
+.link.active, .button.active {
+  color: white;
+  background-color: #1c0a5c;
 }
 
 @media (prefers-color-scheme: light) {
