--- a/client/src/components/left-panel/left-panel.css
+++ b/client/src/components/left-panel/left-panel.css
@@ -7,6 +7,7 @@
     align-items: start;
     justify-content: start;
     border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
 }
 
 .link-wrapper {
@@ -21,7 +22,7 @@
 
 }
 .links {
-    height: 350px;
+    height: 420px;
     display: flex;
     flex-direction: column;
     align-items: start;
