--- a/client/src/components/ticket/ticket.css
+++ b/client/src/components/ticket/ticket.css
@@ -1,3 +1,33 @@
-.ticket-wrapper {
+.tickets-wrapper {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+}
 
+.tickets-wrapper > p {
+    text-align: center;
+    flex: 1 1 0;
+    white-space: nowrap; /* Запрещаем перенос текста на новую строку */
+    overflow: hidden; /* Скрываем содержимое, выходящее за границы блока */
+    text-overflow: ellipsis; /* Добавляем многоточие в конце обрезанного текста */
+    max-width: 100%;
+    font-size: 15px;
+    color: black;
+}
+
+
+.priority {
+    background-color: rgba(0, 128, 0, 0.27);
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.status {
+    background-color: rgba(238, 255, 0, 0.65);
+    border-radius: 20px;
+    padding: 10px;
 }
