--- a/client/src/components/right-panel/create-ticket/create-ticket.css
+++ b/client/src/components/right-panel/create-ticket/create-ticket.css
@@ -76,3 +76,11 @@ fieldset{
     border-bottom:1px solid #efefef;
     margin-bottom:5px;
 }
+
+.form {
+    width: 60%;
+}
+
+.input__wrapper {
+    width: 100%;
+}
