--- a/client/src/components/ticket/ticket.css
+++ b/client/src/components/ticket/ticket.css
@@ -6,6 +6,8 @@
     align-items: center;
     cursor: pointer;
     border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+    transition: .2s linear;
+
 }
 
 .tickets-wrapper > p {
@@ -18,7 +20,9 @@
     font-size: 15px;
     color: black;
 }
-
+.tickets-wrapper:hover {
+    background-color: #edf0f8;
+}
 
 .priority {
     background-color: rgba(0, 128, 0, 0.27);
