--- a/client/src/components/form/ticket-form.css
+++ b/client/src/components/form/ticket-form.css
@@ -1,10 +1,14 @@
 .upload-container {
     border: 2px solid #ccc;
-    padding: 20px;
     border-radius: 10px;
     text-align: center;
-
+    width: 100%;
+    padding: 20px 0;
     font-size: large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .drop-zone {
@@ -12,6 +16,13 @@
     border: 2px dashed #ccc;
     border-radius: 10px;
     cursor: pointer;
+    width: 50%;
+
+    margin: 0 auto;
+}
+
+.dropZone > p {
+    width: 100%;
 }
 
 .preview {
@@ -55,7 +66,6 @@
 .message-text {
     width: 100%;
     height: 200px;
-
     border-radius: 10px;
     padding: 20px;
 
@@ -107,4 +117,8 @@ body{
     border: 2px solid #3DA8BA;
     padding: 10px;
     width: 500px;
+}
+
+.form {
+    width: 100%;
 }
