--- a/client/src/components/accordion/my-accordion.css
+++ b/client/src/components/accordion/my-accordion.css
@@ -59,7 +59,7 @@
 }
 
 .accordion__content:hover {
-    background-color: rgba(22, 100, 243, 0.09);
+    background-color: #edf0f8;
 }
 
 .accordion__item:not(.accordion__item_show) .accordion__body {
@@ -90,5 +90,5 @@
 }
 
 .accordion__content.selected {
-    background-color: #cce5ff;
+    background-color: #edf0f8;
 }
