--- a/client/src/components/accordion/my-accordion.css
+++ b/client/src/components/accordion/my-accordion.css
@@ -66,7 +66,7 @@
     display: none;
 }
 .accordion__body {
-    max-height: 9rem; /* Adjust based on content height to show 3 themes */
+    max-height: 15rem; /* Adjust based on content height to show 3 themes */
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -90,5 +90,5 @@
 }
 
 .accordion__content.selected {
-    background-color: #edf0f8;
+    background-color: #e3efd2;
 }
