--- a/client/src/components/right-panel/create-ticket/create-ticket.css
+++ b/client/src/components/right-panel/create-ticket/create-ticket.css
@@ -1,10 +1,14 @@
 .form-container {
     width: 50%;
-    height: 630px;
+    height: 600px;
     margin-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+.form-container > button {
+    margin-top: 10px;
 }
 
