--- a/client/src/components/form/priority-selector/priority-selector.css
+++ b/client/src/components/form/priority-selector/priority-selector.css
@@ -30,16 +30,17 @@
 .priority-option .checkmark {
     width: 20px;
     height: 20px;
-    border-radius: 50%;
-    border: 2px solid #1c0a5c;
+    border-radius: 10%;
+    border: 2px solid #2d148e;
     background: #fff;
     margin-right: 10px;
     position: relative;
+    transition: .1s linear;
 }
 
 .priority-option input:checked + .checkmark {
-    background: #1c0a5c;
-    border: 2px solid #1c0a5c;
+    background: #2d148e;
+    border: 1px solid #2d148e;
 }
 
 .priority-option input:checked + .checkmark::after {
@@ -47,7 +48,6 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
