--- a/client/src/components/right-panel/create-ticket/create-ticket.css
+++ b/client/src/components/right-panel/create-ticket/create-ticket.css
@@ -1,10 +1,17 @@
 .form-container {
     width: 50%;
-    margin-top: 70px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+.right-panel > h2 {
+    color: #2F4F8EFF;
+    font-weight: 700;
+    font-size: 30px;
+    margin: 50px auto 10px auto;
 }
 
 .form-container > button {
