--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,13 +13,21 @@
 
 }
 
+.container {
+  overflow-y: auto;   /* Добавляет вертикальный скроллинг при необходимости */
+  box-sizing: border-box; /* Включает отступы и границы в ширину и высоту элемента */
+}
+
 h1, h2, p {
   margin: 0;
   padding: 0;
 }
 
 .right-panel {
-  flex: 1 1 0;
+  width: 70%;
+  position: absolute;
+  right: 0;
+  top: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +52,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 
 h1 {
@@ -104,6 +111,8 @@ h1 {
   height: 80px;
   font-weight: bold;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+
 }
 
 .tickets-panel > p {
