--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,12 +1,14 @@
 .header {
     background-color: #2F4F8EFF;
+    width: 100%;
+    height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     z-index: 100;
-
+    position: fixed;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.12);
 }
 
