--- a/client/src/components/accordion/my-accordion.css
+++ b/client/src/components/accordion/my-accordion.css
@@ -21,6 +21,8 @@
     border-top-right-radius: 0.25rem;
     cursor: pointer;
     transition: background-color 0.2s ease-out;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.24);
+
 }
 
 .accordion__header::after {
