--- a/client/src/components/ticket-line/ticket-line.css
+++ b/client/src/components/ticket-line/ticket-line.css
@@ -35,8 +35,22 @@
 }
 
 .status {
-    background-color: rgba(238, 255, 0, 0.65);
     border-radius: 20px;
     padding: 10px;
 }
 
+.grey {
+    background-color: rgba(0, 0, 0, 0.26);
+}
+
+.yellow {
+    background-color: rgba(255, 255, 0, 0.62);
+}
+
+.green {
+    background-color: rgba(0, 128, 0, 0.37);
+}
+
+.red {
+    background-color: rgba(255, 0, 0, 0.59);
+}
