--- a/client/src/view/ticket-page/ticket-page.css
+++ b/client/src/view/ticket-page/ticket-page.css
@@ -4,6 +4,12 @@
     align-items: center;
     justify-content: space-around;
     width: 60%;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    margin-top: 50px;
+    border-radius: 10px;
+    padding-bottom: 30px;
+    height: 700px;
+    background-color: rgba(237, 240, 248, 0.51);
 }
 
 .ticket-page > h2 {
@@ -21,17 +27,17 @@
 }
 
 .ticket-page__column {
-    width: 60%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: start;
     padding: 20px 0;
 
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.13);
 }
 
 .ticket-page__column > p {
-    text-align: left;
+    text-align: justify;
 }
 .ticket-title-p {
     font-weight: bold;
