--- a/client/src/components/right-panel/tickets-panel.css
+++ b/client/src/components/right-panel/tickets-panel.css
@@ -3,5 +3,24 @@
     position: relative;
     top: 80px;
     z-index: 1;
-    height: 1000px;
+    height: 900px;
+}
+
+.pagination {
+    z-index: 10;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination > .button {
+    padding: 5px;
+    z-index: 1000;
+    margin: 0 5px;
+}
+
+.pagination > button:disabled {
+    background-color: #9f9f9f;
 }
