--- a/client/src/components/ticket-line/ticket-line.css
+++ b/client/src/components/ticket-line/ticket-line.css
@@ -1,6 +1,6 @@
 .tickets-wrapper {
     width: 100%;
-    height: 80px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -19,7 +19,8 @@
     white-space: nowrap; /* Запрещаем перенос текста на новую строку */
     overflow: hidden; /* Скрываем содержимое, выходящее за границы блока */
     text-overflow: ellipsis; /* Добавляем многоточие в конце обрезанного текста */
-    max-width: 100%;
+    max-width: 50%;
+    padding: 5px;
     font-size: 15px;
     color: black;
 
