--- a/client/src/components/right-panel/tickets-panel.css
+++ b/client/src/components/right-panel/tickets-panel.css
@@ -3,16 +3,17 @@
     position: relative;
     top: 50px;
     z-index: 1;
-    height: 85vh;
 }
 
 .pagination {
     z-index: 10;
-    width: 30%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    margin-top: 100px;
 }
 
 .pagination > .button {
