--- a/client/src/components/theme-wrapper/theme-wrapper.css
+++ b/client/src/components/theme-wrapper/theme-wrapper.css
@@ -2,9 +2,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 80%;
 
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    border-radius: 15px;
+    padding: 10px 15px;
+    margin-bottom: 5px;
+}
+
+.theme-wrapper > h2 {
+    font-size: 20px;
+    color: #2f4f8e;
 }
 
 .theme-wrapper__buttons {
