--- a/client/src/components/right-panel/tickets-panel.css
+++ b/client/src/components/right-panel/tickets-panel.css
@@ -7,17 +7,16 @@
 
 .pagination {
     z-index: 10;
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 .pagination > .button {
-    padding: 5px;
+    padding: 0 10px;
     z-index: 1000;
     margin: 0 5px;
 }
