--- a/client/src/components/right-panel/tickets-panel.css
+++ b/client/src/components/right-panel/tickets-panel.css
@@ -9,6 +9,7 @@
     z-index: 10;
     width: 90%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
