--- a/client/src/components/ticket-card/ticket-card.css
+++ b/client/src/components/ticket-card/ticket-card.css
@@ -48,3 +48,19 @@
 .closing-button {
     background-color: green;
 }
+
+.grey {
+    background-color: rgba(0, 0, 0, 0.26);
+}
+
+.yellow {
+    background-color: rgba(255, 255, 0, 0.62);
+}
+
+.green {
+    background-color: rgba(0, 128, 0, 0.37);
+}
+
+.red {
+    background-color: rgba(255, 0, 0, 0.59);
+}
