--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -33,6 +33,11 @@
     margin-right: 50px;
 }
 
+.user-info > a {
+    color: white;
+    font-size: 10px;
+}
+
 .avatar {
     font-size: 20px;
     margin: 0 20px;
@@ -40,4 +45,27 @@
     background-color: #46c9f1;
     padding: 10px 10px;
     border-radius: 50%;
+}
+
+@media screen and (min-width: 300px) and (max-width: 899px){
+
+    .user-info {
+        width: 60%;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .logo {
+        margin: 0;
+        width: 30%;
+        flex: 0 0 0;
+    }
+
+    .logo > h2 {
+        font-size: 10px;
+    }
+
+    .user-info > p {
+        font-size: 10px;
+    }
 }
