--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,9 +132,8 @@ h1 {
     }
 
     .tickets-panel {
+      width: 100%;
       display: flex;
-      flex-wrap: wrap; /* позволяет элементам переноситься на следующую строку */
-      width: 100%; /* гарантирует, что контейнер занимает всю доступную ширину */
     }
 
     .tickets-panel > p {
