--- a/client/src/components/left-panel/left-panel.css
+++ b/client/src/components/left-panel/left-panel.css
@@ -71,10 +71,48 @@
     .left-panel {
         width: 100%;
         bottom: 0;
-        height: 100px;
+        height: 185px;
+        padding: 0;
+        margin: 0 auto;
     }
 
     .link-wrapper > h2 {
         display: none;
+    }
+
+    .links {
+        width: 100%;
+        height: 185px;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .link-wrapper {
+        width: 100%;
+        position: relative;
+        margin: 0 auto;
+
+    }
+
+    .links > .link {
+        padding: 20px 0;
+        font-size: 12px;
+        text-align: center;
+        margin: 0 auto;
+        height: 20px;
+        width: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.09);
+    }
+
+    .links > .button {
+        width: 100%;
+        font-size: 10px;
+        margin: 0 auto;
+        padding: 20px 0;
+        height: 20px;
+        grid-column: span 2;
+        text-align: center;
     }
 }
