--- a/client/src/view/ticket-page/ticket-page.css
+++ b/client/src/view/ticket-page/ticket-page.css
@@ -45,3 +45,10 @@
     margin-right: 30px;
 }
 
+@media screen and (min-width: 300px) and (max-width: 899px) {
+
+
+    .tickets-wrapper > p {
+        font-size: 12px;
+    }
+}
