--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -29,22 +29,22 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: end;
-    margin-right: 50px;
+    justify-content: space-evenly;
 }
 
 .user-info > a {
     color: white;
-    font-size: 10px;
+    font-size: 15px;
 }
 
 .avatar {
     font-size: 20px;
-    margin: 0 20px;
+    margin-left: 100px;
     color: white;
     background-color: #46c9f1;
     padding: 10px 10px;
     border-radius: 50%;
+
 }
 
 @media screen and (min-width: 300px) and (max-width: 899px){
@@ -54,11 +54,17 @@
         justify-content: space-around;
         align-items: center;
     }
-
+    .user-info > a {
+        font-size: 10px;
+        margin-right: 15px;
+    }
     .logo {
-        margin: 0;
+        margin: 0 auto;
         width: 30%;
         flex: 0 0 0;
+    }
+    .avatar {
+        margin: 0 auto;
     }
 
     .logo > h2 {
@@ -68,4 +74,9 @@
     .user-info > p {
         font-size: 10px;
     }
+    .name-text {
+        width: 40%;
+        margin-right: 15px;
+    }
+
 }
