--- a/client/src/components/date-selector/date-selector.css
+++ b/client/src/components/date-selector/date-selector.css
@@ -29,3 +29,9 @@
         width: 50%;
     }
 }
+
+@media screen and (min-width: 300px) and (max-width: 899px) and (max-height: 799px) {
+    .dates {
+        margin-top: 30px;
+    }
+}
