--- a/client/src/index.css
+++ b/client/src/index.css
@@ -235,3 +235,10 @@ h1 {
 .toast-theme {
   background-color: rgba(31, 60, 110, 0.91);
 }
+
+
+@media screen and (min-width: 300px) and (max-width: 899px) and (max-height: 799px) {
+  .right-panel {
+    height: 400px;
+  }
+}
