--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -12,6 +12,13 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.12);
 }
 
+.user-info__panel {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .logo {
     text-align: center;
     display: flex;
@@ -39,12 +46,10 @@
 
 .avatar {
     font-size: 20px;
-    margin-left: 100px;
     color: white;
     background-color: #46c9f1;
     padding: 10px 10px;
     border-radius: 50%;
-
 }
 
 @media screen and (min-width: 300px) and (max-width: 899px){
@@ -75,8 +80,10 @@
         font-size: 10px;
     }
     .name-text {
-        width: 40%;
+        width: 50%;
         margin-right: 15px;
     }
-
+    .user-info__panel > .name-text {
+        font-size: 10px;
+    }
 }
