--- a/client/src/view/ticket-page/ticket-page.css
+++ b/client/src/view/ticket-page/ticket-page.css
@@ -8,7 +8,7 @@
     margin-top: 50px;
     border-radius: 10px;
     padding-bottom: 30px;
-    height: 700px;
+    min-height: 700px;
     background-color: rgba(237, 240, 248, 0.51);
 }
 
